yoshimi 2.1.1 M

2021-11-5 Will
* Updated user guide.

2021-11-4 Will
* Loading a state file now always clears the MIDI learn list.

2021-10-27 Will
* BugFix: crash with corrupted history file.
* added Default_Maths.txt to dev_notes.

2021-10-26 Will
* Rationalised some PI calculation variations.
* Added old (commented out) jack MIDI check.

2021-10-17 Will
* Reverted VU changes

2021-10-16 Will
* Minor adjustments to VU metering
* Extra check when loading history lists
* Doc updates

2021-10-15 Will
* BugFix: Missing jack midi entry in CmdOptions.cpp

2021-10-12 Will
* BugFix:  Not recognising no FLTK on first time start
* Set bugfix release 2.1.1.1

2021-10-11 Will
* Final updates to user guide and docs
* Set release version to 2.1.1

2021-10-9 Will
* Bugfix: Vectors not save to correct locations.

2021-10-7 Will
* Created separate button for MIDI CCs in main window
* Updated user guide
* Set version as 2.1.1 rc2

2021-10-6 Will
* Updates in doc and dev_notes
* Additional comments in globals.h and interchange.cpp

2021-10-5 Will
BugFix: Not resetting part effect number to zero
  when loading a new instrument or clearing one.

2021-10-4 Will
* Updates to User guide
* Small GUI cleanups
* Doc and build instruction updates.
* Set version as 2.1.1 rc1

2021-10-3 Will
* Further improvements to bank management
  Mostly addtobank() and orphan/duplicate files

2021-10-2 Will
* Corrected wrong years here!
* Changed search list terminator from "*" to "@end"
  Makes it easier to see and consistent with
  other lists terminators

2021-9-30 Will
* Moved userDir definition to FileMgrFuncs.cpp
  from config.cpp
* Moved localDir definition to FileMgrFuncs.cpp
  from config.cpp
  Also renamed confusing duplicate names in bank.cpp
* Rationalised string manipulation in bank.cpp
* Moved configDir definition to FileMgrFuncs.cpp
  from config.cpp

2021-9-29 Will
* Removed controls to enable part on program change.
  It was only relevant to MIDI and always on regardless.