@@ -1,5 +1,8 @@
 yoshimi 2.1.1 M
 
+2021-11-11 Will
+* BugFix: Data2Text making assumptions about control numbers.
+
 2021-11-5 Will
 * Updated user guide.
 
